remove github icon

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 							<a href="mailto:felixr91@gmail.com" class="textDecor">Email</a>
 						</li>
 						<li class="d-flex">
-							<a href="https://github.com/Felixr91" class="textDecor">Github <i
-									class="fab fa-github"></i></a>
+							<a href="https://github.com/Felixr91" class="textDecor">Github</a>
 						</li>
 						<li>
 							<a href="images/Felix Ramirez Developer Res.pdf">Resume</a>
