--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<a href="https://github.com/Felixr91" class="textDecor">Github</a>
 						</li>
 						<li>
-							<a href="images/Felix Ramirez Resume.pdf">Resume</a>
+							<a href="images/Felix Ramirez resume.pdf">Resume</a>
 						</li>
 					</ul>
 				</div>
